--- a/src/ddpush.properties
+++ b/src/ddpush.properties
@@ -3,7 +3,7 @@ CONSOLE_TCP_PORT=49900
 
 CREATE_MACHINE_BY_CLIENT=YES
 
-TCP_CONNECTOR_ENABLE=YES
+TCP_CONNECTOR_ENABLE=NO
 
 #policy options: never|always|sa_changed
 ACK_HEARTBEAT_POLICY=never
